--- a/src/presentacion/FrmPrincipalAdministrador.form
+++ b/src/presentacion/FrmPrincipalAdministrador.form
@@ -157,6 +157,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="Administrador"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="menuBar" type="java.lang.String" value="mnbAdministrador"/>
